GFM-126: Fix scheme scale alignment

--- a/src/v1/components/Scheme/Scheme.css
+++ b/src/v1/components/Scheme/Scheme.css
@@ -1,6 +1,7 @@
 .map {
     width: 100%;
     position: relative;
+    transform-origin: left top;
 }
 
 .map__map-img {
